--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,5 +92,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-assets:
-  - assets/image/
+  assets:
+    - assets/image/
+    - assets/video/
